--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.1, initial-scale=0.1">
     <link rel="stylesheet" href="globals.css" />
     <link rel="stylesheet" href="style.css" />
-
+     
     <script src="index.js"></script>
    
   </head>
