--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
        
             <ul style="display: flex; text-align: center;" class="loop">
                 <li style="display: flex; margin-left: 44px;"><img src="./img/star.svg" alt=""><h1 style="margin-left: 10px; font-family: 'Poppins', Helvetica; color: white;"">Casino</h1></li>
+                <li style="display: flex; margin-left: 44px;"><img src="./img/star.svg" alt=""><h1 style="margin-left: 10px; font-family: 'Poppins', Helvetica; color: white;"">Solitare</h1></li>
+                <li style="display: flex; margin-left: 44px;"><img src="./img/star.svg" alt=""><h1 style="margin-left: 10px; font-family: 'Poppins', Helvetica; color: white;"">Ludo</h1></li>
+                <li style="display: flex; margin-left: 44px;"><img src="./img/star.svg" alt=""><h1 style="margin-left: 10px; font-family: 'Poppins', Helvetica; color: white;"">Puzzle</h1></li>
                 <li style="display: flex; margin-left: 44px;"><img src="./img/star.svg" alt=""><h1 style="margin-left: 10px; font-family: 'Poppins', Helvetica; color: white;"">Casino</h1></li>
-                <li style="display: flex; margin-left: 44px;"><img src="./img/star.svg" alt=""><h1 style="margin-left: 10px; font-family: 'Poppins', Helvetica; color: white;"">Casino</h1></li>
-                <li style="display: flex; margin-left: 44px;"><img src="./img/star.svg" alt=""><h1 style="margin-left: 10px; font-family: 'Poppins', Helvetica; color: white;"">Casino</h1></li>
-                <li style="display: flex; margin-left: 44px;"><img src="./img/star.svg" alt=""><h1 style="margin-left: 10px; font-family: 'Poppins', Helvetica; color: white;"">Casino</h1></li>
-                <li style="display: flex; margin-left: 44px;"><img src="./img/star.svg" alt=""><h1 style="margin-left: 10px; font-family: 'Poppins', Helvetica; color: white;"">Casino</h1></li>
-                <li style="display: flex; margin-left: 44px;"><img src="./img/star.svg" alt=""><h1 style="margin-left: 10px; font-family: 'Poppins', Helvetica; color: white;"">Casino</h1></li>
-                <li style="display: flex; margin-left: 44px;"><img src="./img/star.svg" alt=""><h1 style="margin-left: 10px; font-family: 'Poppins', Helvetica; color: white;"">Casino</h1></li>
+                <li style="display: flex; margin-left: 44px;"><img src="./img/star.svg" alt=""><h1 style="margin-left: 10px; font-family: 'Poppins', Helvetica; color: white;"">Solitare</h1></li>
+                <li style="display: flex; margin-left: 44px;"><img src="./img/star.svg" alt=""><h1 style="margin-left: 10px; font-family: 'Poppins', Helvetica; color: white;"">Ludo</h1></li>
+                <li style="display: flex; margin-left: 44px;"><img src="./img/star.svg" alt=""><h1 style="margin-left: 10px; font-family: 'Poppins', Helvetica; color: white;"">Puzzle</h1></li>
                 <li style="display: flex; margin-left: 44px;"><img src="./img/star.svg" alt=""><h1 style="margin-left: 10px; font-family: 'Poppins', Helvetica; color: white;"">Casino</h1></li>
                
             </ul>
