--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <li style="display: flex; margin-left: 44px;"><img src="./img/star.svg" alt=""><h1 style="margin-left: 10px; font-family: 'Poppins', Helvetica; color: white;"">Casino</h1></li>
                 <li style="display: flex; margin-left: 44px;"><img src="./img/star.svg" alt=""><h1 style="margin-left: 10px; font-family: 'Poppins', Helvetica; color: white;"">Solitare</h1></li>
                 <li style="display: flex; margin-left: 44px;"><img src="./img/star.svg" alt=""><h1 style="margin-left: 10px; font-family: 'Poppins', Helvetica; color: white;"">Ludo</h1></li>
-                <li style="display: flex; margin-left: 44px;"><img src="./img/star.svg" alt=""><h1 style="margin-left: 10px; font-family: 'Poppins', Helvetica; color: white;"">Puzzle</h1></li>
+                <li style="display: flex; margin-left: 44px;"><img src="./img/star.svg" alt=""><h1 style="margin-left: 10px; font-family: 'Poppins', Helvetica; color: white;"">Casino</h1></li>
                 <li style="display: flex; margin-left: 44px;"><img src="./img/star.svg" alt=""><h1 style="margin-left: 10px; font-family: 'Poppins', Helvetica; color: white;"">Casino</h1></li>
                
             </ul>
